@@ -1,7 +1,8 @@
 # This File is automatically generated by make dist-update
 # Any Edits on this file will be lost next time dist-update is run
 
-DISTFILES =	ChangeLog \
+DISTFILES =	.gitignore \
+	ChangeLog \
 	INSTALL \
 	Makefile \
 	README.md \
@@ -119,6 +120,7 @@ DISTFILES =	ChangeLog \
 	config/remotec/zxt-120.xml \
 	config/schlagelink/itemp.xml \
 	config/schlagelink/minikeypad.xml \
+	config/swiid/swiidinter.xml \
 	config/trane/TZEMT400AB32MAA.xml \
 	config/trane/TZEMT400BB32MAA.xml \
 	config/vision/zm1601eu.xml \
